At Wild Code School, we code without shoes.

--- a/wild.html
+++ b/wild.html
@@ -1,43 +1,1 @@
-<!DOCTYPE html>
-<html lang = "fr">
-
-<head>
-    <link rel="stylesheet" href="style.css"/>
-    <title> Wild Git </title>
-    <meta charset="UTF-8">
-</head>
-
-<body style="background-color:#ffbe76">
-
-<header>
-    <h1> Wild Git </h1>
-</header>
-
-<main>
-    <article>
-            <p>Février 2023...</p>
-        <h2> Le bootcamp de la <a href= "https://www.wildcodeschool.com/fr-fr/formations-data/formation-data-analyst-a-distance" target="_blank"> formation Data Analyst </a> est terminé... </h2>
-            <p> Mr Canard, formateur à la <a href= "http://www.wildcodeschool.com" target="_blank"> Wild Code School </a> est ravi d'avoir accompagné ses adorables élèves pendant 5 mois... </p> 
-            <p>Il s'accorde des vacances bien méritées à l'autre bout du monde.</p>
-            <p>Il reviendra totalement reposé et redoublera d'énergie pour...</p>
-                <li>Concocter des quiz avec des pièges toujours plus tordus</li>
-                <li>Réaliser des live codes très précieux </li>
-                <li>Partager son savoir avec patience et passion</li>
-            <p>Il fera la joie de ses prochains élèves et assurera leur réussite, comme il le fit pour ses tout premiers élèves</p>
-    
-    </article>
-
-    <aside>
-        <div style="text-align: center;">
-        </div>
-    </aside>
-</main>
-
-
-<footer>
-    <p> Réalisé par Julie D.</p>
-</footer>
-
-</body> 
-
-</html>
+"At Wild Code School, we code without shoes."
